# slide_smith

./: CHANGELOG.md  CLAUDE.md  LICENSE  PLAN-v1.2.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  archetypes.md  layout-ids.md  release.md
schemas/: README.md  deck-spec-exemplar.schema.json  slide-plan.schema.json  style-profile.schema.json
templates/: README.md
tests/: test_assets.py  test_assets_image_object.py  test_bootstrap_from_slide.py  test_bootstrap_template.py  test_cli_assets_dir.py  test_cli_create.py  test_cli_help_request_contract.py  test_commands_export_previews.py  test_create_render_warnings.py  test_deck_spec_and_markdown.py  test_deck_spec_image_object.py  test_deck_spec_validation.py  test_editor.py  test_editor_v2.py  test_end_to_end_bootstrap_loop.py  test_exemplar_compiler.py  test_exemplar_renderer.py  test_exemplar_validator.py  test_export_previews_manifest_contract.py  test_help_api_contract.py  test_help_command.py  test_hints_apply_slot_hints.py  test_insert_slide_command.py  test_inspect_pptx.py  test_inspect_pptx_raw_mode.py  test_layout_id_normalization.py  test_make_dummy_deck_spec.py  test_openxml_layouts.py  test_potx_converter.py  test_redesign_examples_schema.py  test_reference_analyzer.py  test_reference_analyzer_raw_layout_id.py  test_renderer.py  test_renderer_box_slots.py  test_renderer_extended_archetypes_errors.py  test_renderer_fallback.py  test_renderer_layout_part_resolution.py  test_renderer_missing_placeholder_error.py  test_schema_validation.py  test_slide_plan_from_markdown.py  (+13 more)
(+94 files in other folders)
